# gsea

./: Cargo.toml  README.md
.deepseek/: instructions.md
.github/workflows/: ci.yml
evolution_sandbox/: Cargo.toml
evolution_sandbox/src/: lib.rs  main.rs
memory/: gsea.db  memory_brain.db
sessions/: test_session.json
skills/: is_all_even.rs  is_alphanumeric.rs  to_title_case.rs
src/: agent.rs  gui.rs  main.rs  mcp_server.rs
src/evolution/: mod.rs
src/llm/: embedding.rs  mod.rs
src/memory_brain/: consolidate.rs  episodic.rs  forgetting.rs  mod.rs  procedural.rs  semantic.rs  storage.rs  types.rs  working.rs
src/tools/: file_tools.rs  memory_tools.rs  mod.rs  skill_tools.rs
src/tools/skills/: is_alphanumeric.rs  mod.rs  to_title_case.rs
