[package]
name = "gsea"
version = "0.1.0"
edition = "2021"
description = "Gemma Self-Evolving Agent — local LLM agent with persistent MemoryBrain"
authors = ["Paul Yu <paul.yu@coreon.ai>"]
license = "MIT"
repository = "https://github.com/yhc007/gsea"
keywords = ["llm", "agent", "memory", "rust", "evolution"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["memory/*.db", "sessions/*.json", "evolution_sandbox/*"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
rustyline = "14"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
